[gd_scene load_steps=12 format=3 uid="uid://d0tdheuqt72cx"]

[ext_resource type="Script" uid="uid://36hn6giyyldc" path="res://src/shared/Ship.gd" id="1_401tm"]
[ext_resource type="PackedScene" uid="uid://bycl7fsp2fuqa" path="res://scenes/Guns/CA_gun1/Gun.tscn" id="2_s07ea"]
[ext_resource type="Script" uid="uid://cx1f7vlowd3nn" path="res://src/artillary/secondary_controller.gd" id="3_6bfr6"]
[ext_resource type="PackedScene" uid="uid://de7wvvgfltyco" path="res://scenes/Guns/sec_gun1/SmallGun.tscn" id="4_3jns7"]
[ext_resource type="Script" uid="uid://c8na862s28shq" path="res://src/artillary/dispersion_calculator.gd" id="5_mc6m2"]
[ext_resource type="PackedScene" uid="uid://psoivfcd8yg8" path="res://scenes/wake_emitter.tscn" id="6_5s7s2"]
[ext_resource type="PackedScene" uid="uid://dmabeflns107f" path="res://src/shared/HitPointsManager.tscn" id="7_kcmvp"]
[ext_resource type="PackedScene" uid="uid://dgvbfjlhdgg7f" path="res://src/artillary/artillery_controller.tscn" id="8_77vud"]
[ext_resource type="PackedScene" uid="uid://bpa424xhggvk2" path="res://src/shared/ship_movement.tscn" id="9_bmpk0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_qlg0r"]
friction = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_hcvt1"]
size = Vector3(21, 9.3, 205)

[node name="Ship" type="RigidBody3D"]
mass = 17300.0
physics_material_override = SubResource("PhysicsMaterial_qlg0r")
script = ExtResource("1_401tm")

[node name="PlayerName" type="Label" parent="."]
offset_left = -51.0
offset_top = -94.0
offset_right = -11.0
offset_bottom = -71.0
text = "PlayerName"

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.228271, 0)
size = Vector3(21, 9.3, 205)

[node name="Gun" parent="CSGBox3D" instance=ExtResource("2_s07ea")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.38763, 6.42173, 47.3207)
rotation_limits_enabled = true
min_rotation_angle = 3.76919
max_rotation_angle = 2.49551

[node name="Gun2" parent="CSGBox3D" instance=ExtResource("2_s07ea")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.38763, 10.4955, -42.2908)
rotation_limits_enabled = true
min_rotation_angle = 0.575959
max_rotation_angle = 5.70723

[node name="Gun3" parent="CSGBox3D" instance=ExtResource("2_s07ea")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.38763, 6.42173, -57.8009)
rotation_limits_enabled = true
min_rotation_angle = 0.609504
max_rotation_angle = 5.60405

[node name="Secondaries" type="Node3D" parent="."]
script = ExtResource("3_6bfr6")

[node name="Sec" parent="Secondaries" instance=ExtResource("4_3jns7")]
transform = Transform3D(-0.3, 0, -2.62268e-08, 0, 0.3, 0, 2.62268e-08, 0, -0.3, 0, 12.8501, -25.146)
rotation_limits_enabled = true
min_rotation_angle = 0.558505
max_rotation_angle = 5.72468

[node name="Sec7" parent="Secondaries" instance=ExtResource("4_3jns7")]
transform = Transform3D(0.3, 0, 5.24536e-08, 0, 0.3, 0, -5.24536e-08, 0, 0.3, 0, 12.6074, 34.9765)
rotation_limits_enabled = true
min_rotation_angle = 3.76991
max_rotation_angle = 2.60054

[node name="Sec3" parent="Secondaries" instance=ExtResource("4_3jns7")]
transform = Transform3D(-0.3, 0, -2.62268e-08, 0, 0.3, 0, 2.62268e-08, 0, -0.3, 7.071, 7.82199, -13.472)
rotation_limits_enabled = true
min_rotation_angle = 0.366519
max_rotation_angle = 3.14159

[node name="Sec4" parent="Secondaries" instance=ExtResource("4_3jns7")]
transform = Transform3D(-0.3, 0, -2.62268e-08, 0, 0.3, 0, 2.62268e-08, 0, -0.3, -7.22343, 7.82199, -12.3004)
rotation_limits_enabled = true
min_rotation_angle = 3.14159
max_rotation_angle = 5.88176

[node name="Sec5" parent="Secondaries" instance=ExtResource("4_3jns7")]
transform = Transform3D(0.3, 0, 5.24536e-08, 0, 0.3, 0, -5.24536e-08, 0, 0.3, 6.18141, 7.82199, 21.0575)
size = Vector3(10, 4, 16.9309)
rotation_limits_enabled = true
max_rotation_angle = 2.75762

[node name="Sec6" parent="Secondaries" instance=ExtResource("4_3jns7")]
transform = Transform3D(0.3, 0, 5.24536e-08, 0, 0.3, 0, -5.24536e-08, 0, 0.3, -7.10699, 7.82199, 20.6572)
rotation_limits_enabled = true
min_rotation_angle = 3.40339

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.000305176)
shape = SubResource("BoxShape3D_hcvt1")

[node name="DispersionCalculator" type="Node" parent="."]
script = ExtResource("5_mc6m2")

[node name="Rudder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 112.701)

[node name="WakeEmitter" parent="." instance=ExtResource("6_5s7s2")]
transform = Transform3D(0.925739, 0, -0.378164, 0, 1, 0, 0.378164, 0, 0.925739, -17.5703, -2.20763, 125)

[node name="WakeEmitter2" parent="." instance=ExtResource("6_5s7s2")]
transform = Transform3D(0.969544, 0, 0.244918, 0, 1, 0, -0.244918, 0, 0.969544, 15.7965, -2.20763, 125)

[node name="WakeEmitter3" parent="." instance=ExtResource("6_5s7s2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.809441, -0.765186, -134.869)

[node name="HitPointsManager" parent="." instance=ExtResource("7_kcmvp")]
max_hp = 56000.0

[node name="ArtilleryController" parent="." instance=ExtResource("8_77vud")]

[node name="ShipMovement" parent="." instance=ExtResource("9_bmpk0")]
speed = 45.0
time_to_full_speed = 30.0
linear_damping = 0.1
rudder_shift_time = 4.0
turning_circle = 500.0

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.27155, 108.356)
size = Vector3(5, 5, 5)
